<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="log_in">Log In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="instagram_logo_description">Instagram Logo</string>
    <string name="signup_activity_title">Sign Up</string>
    <string name="message_suffix_signup_successful">\u0020successfully signed up</string>
    <string name="message_suffix_login_successful">\u0020successfully logged in</string>
    <string name="message_prefix_sign_in_progress">\"Signing up \"</string>
    <string name="message_incomplete_signup_fields"><![CDATA[Email, Username & Password are required]]></string>
</resources>
